Update and rename CodeWithATZ.html to BIMS Portfolio.html

--- a/BIMS Portfolio.html
+++ b/BIMS Portfolio.html
@@ -215,7 +215,7 @@
 
     </form>
 
-    <footer class="copyright">&copy; Copyright 2024 <a href="">AITZAZ MUGHAL</a></footer>
+    <footer class="copyright">&copy; Copyright 2024 <a href="">ATZ MUGHAL</a></footer>
 </body>
 
 </html>
